harden auth for production
- Add Auth.js v5 with Credentials provider + database sessions
- Add jwt.encode bridge for Credentials  DB session creation
- Add Prisma adapter models (User, Account, Session, VerificationToken)
- Add RBAC with Role enum (USER/ADMIN) and requireAdmin() guard
- Add login page, sign-out button, next-auth route handler
- Add rate limiting on credential login (Upstash Redis, 5/15min per IP)
- Rename User.password  User.passwordHash for clarity
- Pin next-auth to exact version 5.0.0-beta.30
- Remove stale Basic Auth references from .env.example, README, startup-log
- Add AUTH_SECRET + AUTH_URL + Upstash env var docs to .env.example
- Add MySQL version compatibility note to README
- Add TypeScript session type augmentation (next-auth.d.ts)
- Migration uses CHANGE COLUMN for MySQL 5.7+ / MariaDB 10.3+ compat
- argon2 externalised in next.config.js (never imported in Edge runtime)
- Security headers: HSTS, X-Frame-Options DENY, nosniff, XSS protection

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,34 @@
-# Copy to .env and fill in values
+# Copy to .env and fill in values.
+# NEVER commit this file with real secrets.
+
+# ─── Database ────────────────────────────────────────────────
 DATABASE_URL="mysql://user:password@localhost:3306/globescraper"
 SHADOW_DATABASE_URL="mysql://user:password@localhost:3306/globescraper_shadow"
 
-# Basic Auth for /admin (required in production)
-BASIC_AUTH_USER="admin"
-BASIC_AUTH_PASS="change-me"
+# ─── Auth.js v5 ─────────────────────────────────────────────
+# Required. A random secret used to encrypt cookies & tokens.
+# Generate with EITHER:
+#   npx auth secret
+#   openssl rand -base64 33
+# Set this in your local .env AND in Vercel env vars
+# (Production + Preview + Development).
+AUTH_SECRET=""
 
-# Optional: where to notify yourself (future)
+# Optional. Auth.js auto-detects the URL on Vercel (via VERCEL_URL).
+# Set explicitly only for local dev or custom domains.
+#   local:  http://localhost:3000
+#   prod:   https://globescraper.com
+# AUTH_URL="http://localhost:3000"
+
+# ─── Rate Limiting (Upstash Redis) ──────────────────────────
+# Required in production for login rate limiting.
+# Create a free Redis DB at https://console.upstash.com
+# Set these in Vercel env vars (Production + Preview).
+# When not set, rate limiting falls back to a permissive
+# in-memory store (suitable for local dev only).
+UPSTASH_REDIS_REST_URL=""
+UPSTASH_REDIS_REST_TOKEN=""
+
+# ─── Optional ────────────────────────────────────────────────
 NOTIFY_EMAIL=""
-
-# Google Analytics 4
 NEXT_PUBLIC_GA_MEASUREMENT_ID="G-XXXXXXXXXX"
