--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "postinstall": "prisma generate",
-    "migrate:deploy": "prisma migrate deploy"
+    "migrate:deploy": "prisma migrate deploy",
+    "seed:admin": "tsx scripts/seed-admin.ts"
   },
   "engines": {
     "node": ">=18.17.0"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@prisma/client": "5.18.0",
+    "@upstash/ratelimit": "^2.0.8",
+    "@upstash/redis": "^1.36.2",
+    "argon2": "^0.44.0",
     "isomorphic-dompurify": "^3.0.0",
     "next": "14.2.5",
+    "next-auth": "5.0.0-beta.30",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "zod": "3.23.8"
@@ -30,6 +36,7 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
     "prisma": "5.18.0",
+    "tsx": "^4.21.0",
     "typescript": "5.5.4"
   }
 }
